# inbodyplus_poc

./: .gitignore  extract_figma.py  figma_raw.json  init-100x-poetry.sh  setup_ping_pong.sh
.agent/active_specs/: 01_current_requirements.md  01_requirements.md  03_architecture.md
.agent/docs/: 00_project_context.md  figma_mcp_server_guide.md  workflow_overview.md
.agent/workflows/: 01_task_define.md  02_environment_manager.md  03_architect.md  04_builder.md  05_reporter.md
.agent/workflows/actions/: act_build_backend.md  act_build_frontend.md  act_define_task.md  act_design_arch.md  act_design_doc.md  act_extract_figma_design.md  act_init_feature.md  act_report.md  act_research_code.md  act_setup_env.md
.agent/workflows/roles/: 00_lead.md  01_product_manager.md  02_lead_architect.md  03_full_stack_developer.md
docs/archive/: 20251211_PingPong_Design.md  20251211_PingPong_Impl.md  20251211_PingPong_Req.md  20251211_PingPong_Retro.md
docs/archive/2025-12-12_feat-user-api/: 00_research_summary.md  00_summary.md  01_requirements.md  03_architecture.md  04_implementation_report.md
docs/archive/2025-12-12_orm-mssql2/: 00_summary.md  00_task_list.md  01_requirements.md  03_architecture.md  04_implementation_report.md
my-100x-project/: package.json  pnpm-lock.yaml  setup_ping_pong.sh  turbo.json
my-100x-project/.git_backup/: index  packed-refs
my-100x-project/apps/data-worker/: Dockerfile  package.json  pyproject.toml
my-100x-project/apps/data-worker/app/: main.py
my-100x-project/scripts/: create-worktree.sh
scripts/: new-feature.sh
(+77 files in other folders)
